# etiqueta-expedicao

./: .gitignore  pyproject.toml
etiqueta_expedicao/: infos_da_os.ipynb
etiqueta_expedicao/busca_trabalhos/: main.py
