[tool.poetry]
name = "etiqueta-expedicao"
version = "0.1.0"
description = ""
authors = ["Everton de Souza <e.rodrigo@outlook.com>"]
readme = "README.md"
packages = [{include = "etiqueta_expedicao"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
